<resources>
    <string name="app_name">FOODO</string>
    <string name="email_textbox">Email</string>
    <string name="password_textbox">Password</string>
    <string name="login_button">Login</string>
    <string name="create_account_text">Don\'t have an account? Sign up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="recipe_results_text">Which recipe would you like to use?</string>
    <string name="restaurant_results_text">Which restaurant would you like to goto?</string>
    <string name="final_recipe_name">Recipe</string>
    <string name="final_restaurant_name">Restaurant</string>
    <string name="recipe_steps_header">Steps</string>
    <string name="recipe_steps">FILLER</string>
    <string name="cooktime_header">Cook time:</string>
    <string name="cooktime">FILLER</string>
    <string name="time_header">Time:</string>
    <string name="price_header">Price:</string>
    <string name="price">FILLER</string>
    <string name="favorite_prompt">Do you want to add this to Favorites?</string>
    <string name="yes_radio">Yes</string>
    <string name="no_radio">No</string>
    <string name="time_to_eat">Time to eat!</string>
    <string-array name="test_array">
        <item> hello</item>
        <item> hello</item>
        <item> hello</item>
        <item> hello</item>
        <item> hello</item>
        <item> hello</item>
        <item> hello</item>
        <item> hello</item>
        <item> hello2</item>
        <item> hello2</item>
        <item> hello2</item>
        <item> hello2</item>
        <item> hello2</item>


    </string-array>

    <string name="cookware">Cookware:</string>
    <string name="search_query">What do you want to eat?</string>
    <string name="search_recipe">Search Recipe</string>
    <string name="recipe">Recipe 1</string>
    <string name="steps">Steps:</string>
    <string name="cook_time">Cook Time:</string>
    <string name="recipe_price">Price:</string>
    <string name="recipe_preference_query">Do you want to use this recipe to compare?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="restaurant">Restaurant 1</string>
    <string name="address">Address</string>
    <string name="reviews">Reviews:</string>
    <string name="restaurant_preference_query">Would you like to use this restaurant to compare?</string>
    <string-array name="fake_list">
        <item>Element1</item>
        <item>Element2</item>
        <item>Element3</item>
        <item>Element4</item>
        <item>Element5</item>
        <item>Element6</item>
        <item>Element7</item>
        <item>Element8</item>
        <item>Element9</item>
        <item>Element10</item>
    </string-array>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_favorite_query">Would you like to add it to your favorite?</string>
    <string name="favorite">Favorite</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="create_new_account">Create New Account</string>
    <string name="email">Enter Email Address</string>
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="sign_up">Create a new account</string>
    <string name="or">Or</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="sort_dropdown">
        <item>Sort By</item>
        <item>Price</item>
    </string-array>
    <string-array name="sort_dropdown_recipe">
        <item>Sort By</item>
        <item>Price</item>
        <item>Time</item>
    </string-array>
    <string-array name="sort_dropdown_restaurant">
        <item>Sort By</item>
        <item>Price</item>
        <item>Distance</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="direction">Get direction</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
