<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipePage">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/recipe_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe"
        android:textSize="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:textStyle="bold"/>

    <ScrollView
        android:id="@+id/scroll_recipe"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="65dp">

        <LinearLayout
            android:id="@+id/recipe_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steps"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cook_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="260dp"
                android:text="@string/cook_time"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/recipe_price"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/recipe_preference_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_preference_query"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="470dp"
        android:layout_marginLeft="30dp"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="500dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/recipe_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"/>

        <Button
            android:id="@+id/recipe_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"/>

    </LinearLayout>


</FrameLayout>