<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeEnd">


    <TextView
        android:id="@+id/recipe_name_end"
        android:layout_gravity="top|center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_recipe_name"
        android:textStyle="bold" />

    <ScrollView
        android:layout_gravity="top|center"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="320dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp">

            <TextView
                android:id="@+id/recipe_price_end"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:text="@string/price_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/recipe_cook_time_end"
                android:layout_marginTop="10dp"
                android:text="@string/cooktime_header"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/ingredients_end"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:text="Ingridents:"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/recipe_steps_header"/>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/recipe_favorite_query"
        android:layout_marginTop="430dp"
        android:textSize="21sp"
        android:textStyle="bold"
        android:text="@string/favorite_prompt"
        android:layout_gravity="center|top"
        android:layout_width="350dp"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:layout_marginTop="460dp"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/add_favorite_recipe_yes"
            android:text="@string/yes_radio"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/add_favorite_recipe_no"
            android:text="@string/no_radio"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <Button
        android:id="@+id/cook_time"
        android:layout_gravity="top|center"
        android:layout_marginTop="490dp"
        android:text="@string/time_to_eat"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</FrameLayout>