<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantEnd">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/restaurant_name_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_name"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginLeft="30dp"/>

    <com.google.android.gms.maps.MapView
        android:id="@+id/restaurant_mapView_end"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="70dp"/>

    <TextView
        android:id="@+id/get_direction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/direction"
        android:textSize="20sp"
        android:layout_marginLeft="50dp"
        android:textStyle="bold"
        android:layout_marginTop="275dp"/>

    <TextView
        android:id="@+id/restaurant_favorite_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_favorite_query"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="30dp"/>

    <RadioGroup
        android:id="@+id/restaurant_favorite_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="420dp">

        <RadioButton
            android:id="@+id/restaurant_favorite_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/restaurant_favorite_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textSize="20sp"/>
    </RadioGroup>

    <Button
        android:id="@+id/restaurant_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_to_eat"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="480dp"
        android:layout_gravity="center_horizontal"/>

</FrameLayout>