<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FavoriteRecipe">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/favorite_recipe_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:textStyle="bold"/>

    <ScrollView
        android:id="@+id/favorite_scroll_recipe"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="90dp">

        <LinearLayout
            android:id="@+id/favorite_recipe_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/favorite_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/recipe_price"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/favorite_cook_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/cook_time"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/favorite_ingredients"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:text="Ingridents:"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/favorite_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steps"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>


</FrameLayout>